# Photon-X-Pro

./: .clangd  PhotonXPro.slnx  register_context_menu.ps1
.github/workflows/: release.yml
src/Core/PhotonXPro.Core.Orchestration/: Library.fs  PdfWorkflow.fs  PhotonXPro.Core.Orchestration.fsproj
src/Engine/PhotonXPro.Engine.Native/: CMakeLists.txt
src/Engine/PhotonXPro.Engine.Native/include/: Common.h  HapRenderer.h  HardwareDetector.h  ImageEncoder.h  PdfBinaryParser.h  PdfSigner.h
src/Engine/PhotonXPro.Engine.Native/src/: HapRenderer.cpp  HardwareDetector.cpp  ImageEncoder.cpp  PdfBinaryParser.cpp  PdfSigner.cpp  dllmain.cpp
src/UI/PhotonXPro.UI.Maui/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  DashboardPage.xaml  DashboardPage.xaml.cs  MauiProgram.cs  PhotonXPro.UI.Maui.csproj
src/UI/PhotonXPro.UI.Maui/Converters/: InverseBoolConverter.cs
src/UI/PhotonXPro.UI.Maui/ViewModels/: MainViewModel.cs
src/UI/PhotonXPro.UI.Tauri/: package-lock.json  package.json  tailwind.config.js
src/UI/PhotonXPro.UI.Tauri/src/: app.scss
src/UI/PhotonXPro.UI.Tauri/src-tauri/: Cargo.toml  tauri.conf.json
src/UI/PhotonXPro.UI.Tauri/src-tauri/src/: lib.rs
src/UI/PhotonXPro.UI.Tauri/src-tauri/src/commands/: pdf.rs
src/UI/PhotonXPro.UI.Tauri/src-tauri/src/engine/: ffi.rs
src/UI/PhotonXPro.UI.Tauri/src/lib/components/: CombineModal.svelte
src/UI/PhotonXPro.UI.Tauri/src/lib/stores/: documentStore.ts
src/UI/PhotonXPro.UI.Tauri/src/routes/: +layout.svelte  +page.svelte
